--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@redux-devtools/extension": "^3.3.0",
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
@@ -21,7 +24,9 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
+    "react-thunk": "^1.0.0",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
