--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-thunk": "^1.0.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
